tests/baselines/reference/parserConstructorDeclaration10.errors.txt
==== tests/cases/compiler/parserConstructorDeclaration10.ts (1 errors) ====
    class C {
      constructor(): number { }
                   ~~~~~~~~
!!! parserConstructorDeclaration10.ts(2,16): error TS1093: Type annotation cannot appear on a constructor declaration.
    }